cassandra/cluster/cassandra-allinone.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra-pks-demo
  name: cassandra-pks-demo
spec:
  clusterIP: None
  ports:
    - port: 9042
  selector:
    app: cassandra-pks-demo
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-pks-demo-external
  labels:
    app: cassandra-pks-demo
    name: cassandra-pks-demo-external
spec:
  type: LoadBalancer
  ports:
    - port: 9042
  selector:
    app: cassandra-pks-demo
---
apiVersion: "apps/v1beta1"
kind: StatefulSet
metadata:
  name: cassandra-pks-demo
spec:
  serviceName: cassandra-pks-demo
  replicas: 3
  template:
    metadata:
      labels:
        app: cassandra-pks-demo
    spec:
      containers:
      - name: cassandra
        image: cassandra:3
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 4096Mi
          requests:
            cpu: "1"
            memory: 4096Mi
        ports:
        - containerPort: 7000
          name: intra-node
        - containerPort: 7001
          name: tls-intra-node
        - containerPort: 7199
          name: jmx
        - containerPort: 9042
          name: cql
        volumeMounts:
        - name: cassandra-data
          mountPath: /var/lib/cassandra/data
  volumeClaimTemplates:
  - metadata:
      name: cassandra-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: fast
      resources:
        requests:
          storage: 30Gi
