cassandra/cluster/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-np
spec:
  podSelector:
    matchLabels:
      app: cassandra-demo-cluster-app
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: cassandra-demo-client-app
